# IA-trade-note-parser

./: main.py  pdf_json.json  pyproject.toml  table_configs.yaml  test_table.py  xp_negociacao.csv
