[project]
name = "ia-trade-note-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "camelot-py[cv]>=0.11.0",
    "matplotlib>=3.10.3",
    "ollama>=0.5.1",
    "pymupdf>=1.26.0",
    "pypdf>=5.6.0",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
